--- a/client/bower.json
+++ b/client/bower.json
@@ -27,7 +27,8 @@
     "moment": "~2.12.0",
     "angular-ui-router": "~0.4.2",
     "toastr": "~2.1.2",
-    "angular-bootstrap": "~1.2.5"
+    "angular-bootstrap": "~1.2.5",
+    "angular-md5": "^0.1.10"
   },
   "resolutions": {
     "angular": "~1.5.9"
